Refactored a few files - fixed SonarQube flags